Fixing failing jobs